force-app/main/default/objects/Contact/fields/Company_Block__c.field-meta.xml
<CustomField>
    <fullName>Company_Block__c</fullName>
    <formula>IF(ISBLANK(Account.Name), &quot;&quot;, LOWER(LEFT(TRIM(Account.Name), 5)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Block</label>
    <type>Text</type>
</CustomField>