force-app/main/default/objects/Contact/fields/Email_Block__c.field-meta.xml
<CustomField>
    <fullName>Email_Block__c</fullName>
    <formula>IF(ISBLANK(Email), &quot;&quot;, LOWER(LEFT(Email, FIND(&quot;@&quot;, Email &amp; &quot;@&quot;) - 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Block</label>
    <type>Text</type>
</CustomField>