force-app/main/default/objects/Contact/fields/Name_Block__c.field-meta.xml
<CustomField>
    <fullName>Name_Block__c</fullName>
    <formula>LOWER(LEFT(LastName, 3)) &amp; LOWER(LEFT(FirstName, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Block</label>
    <type>Text</type>
</CustomField>