force-app/main/default/objects/Contact/fields/Portal_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Portal User ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>