force-app/main/default/objects/Contact/fields/Sales_Informed_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Informed_Agreement_Signed__c</fullName>
    <label>Date Account Agreement Signed</label>
    <type>Date</type>
</CustomField>